--- a/scss/utils/variables.scss
+++ b/scss/utils/variables.scss
@@ -2,7 +2,9 @@
 
 $color_base: #fefbf4;
 
-$color_claro: #fdf4eda6;
+$color_claro: #fdf4ed;
+
+$color_claro_transparente: #fdf4eda6;
 
 $color_vivido: #facea7;
 
@@ -12,9 +14,9 @@ $color_neutro: #ece9d8;
 
 $color_neutro_transparente: #ece9d856;
 
-$color_tipografia1: #000000;
+$color_tipografia1: #0000009c;
 
-$color_tipografia2: #b3723a;
+$color_tipografia2: #9b602c81;
 
 
 /*------Tipografias------*/
