--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,10 @@
 
 @import "./components/header.scss";
 
+@import "./components/logo.scss";
+
+@import "./components/aside.scss";
+
 @import "./components/navbar.scss";
 
 @import "./components/footer.scss";
