--- a/scss/base/reseteo.scss
+++ b/scss/base/reseteo.scss
@@ -28,4 +28,9 @@ body{
     color: $color_tipografia1;
     font-size: 20px;
 
+    main{
+        position: relative;
+        top: 160px;
+    }
+
 }
