--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,10 @@
 
 @import "./components/footer.scss";
 
+@import "./components/tienda.scss";
+
+@import "./components/producto.scss";
+
 @import "./pages/index.scss";
 
 @import "./pages/nudos.scss";
