--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -13,5 +13,12 @@ header{
     position: fixed;
     top: 0;
     z-index: 50;
-    
+}
+
+@media(min-width: 768px) and (max-width: 1024px){
+    header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
