--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,10 +1,11 @@
 .portada{
-    height: 550px;
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    padding-top: 20px;
+    padding-bottom: 50px;
     gap: 40px;
 
     img{
@@ -21,5 +22,46 @@
         font-family: $tipografia_logo1;
         text-align: right;
         font-size: 1.8rem;
+    }
+   
+}
+
+.irashop{
+    width: 100vw;
+    background-color: $color_neutro;
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+
+    a{
+        img{
+            width: 200px;
+        }
+    }
+  
+    ul{
+        display: none;
+    }
+}
+
+@media (min-width: 768px){
+    .irashop{
+        a{
+            display: none;
+        }
+
+        ul{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            a{
+                img{
+                    width: 150px;
+                }
+            }
+
+        }
     }
 }
