--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   /*---Tipografia---*/
   font-family: "Yanone Kaffeesatz", sans-serif;
   color: rgba(0, 0, 0, 0.6117647059);
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 @media (min-width: 768px) {
   body {
@@ -30,6 +30,11 @@ body main {
   position: relative;
   top: 160px;
   bottom: 40px;
+}
+body main h3 {
+  font-size: 2rem;
+  text-align: center;
+  margin: 15px;
 }
 
 aside {
